--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,41 @@
-body{
+body {
     background-color: lightblue;
     color: white;
 }
-h1{
+
+h1 {
     color: blue;
 }
-p{
+
+p {
     color: lightpink;
 }
 
-img{border-radius: 50%;
+img {
+    border-radius: 50%;
 }
 
-#special{
+#special {
     color: #663399;
     background-color: beige;
 }
 
-#special2{
+#special2 {
     color: #FA8072;
     background-color: bisque;
 }
 
-#special3{
+#special3 {
     color: #A0522D;
     background: #F5DEB3;
 }
-#special4{
+
+#special4 {
     border: 2px solid red;
+}
+ol{
+    color: brown;
+}
+ul{
+    color: darkslategray;
 }
